Finishing setting grunt configuration

--- a/dev/partials/head.hbs
+++ b/dev/partials/head.hbs
@@ -1,6 +1,7 @@
 <html>
-<head>
-	<title>Marvin Solano Eduarte | Web Developer</title>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="css/main.min.css">
-</head>
+	<head>
+		<title>Marvin Solano Eduarte | Web Developer</title>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="css/main.min.css">
+	</head>
+<body>
