--- a/dev/components/menu'/menu.hbs
+++ b/dev/components/menu'/menu.hbs
@@ -1,3 +1,10 @@
 <div class="menu">
-	
+	<ul>
+		<li class="fa fa-bars fa-2x"></li>
+		<li class="fa fa-home fa-2x"></li>
+		<li class="fa fa-user fa-2x"></li>
+		<li class="fa fa-graduation-cap fa-2x"></li>
+		<li class="fa fa-briefcase fa-2x"></li>
+		<li class="fa fa-paper-plane fa-2x"></li>
+	</ul>
 </div>
