--- a/dev/components/menu'/menu.scss
+++ b/dev/components/menu'/menu.scss
@@ -1,5 +1,17 @@
 @import "../global/global";
 .menu{
-	background: $dark-gray;
-	height: 65px;
+	ul{
+		padding: 0;
+		.fa{
+			background: $dark-gray;
+			border-bottom: 1px solid rgba(white,0.4);
+			color: white;
+			display: block;
+			padding: 10px;
+			&:first-of-type{
+				background: $red;
+				border-bottom: 0;
+			}
+		}
+	}
 }
