--- a/dev/components/menu'/menu.hbs
+++ b/dev/components/menu'/menu.hbs
@@ -1,10 +1,28 @@
 <div class="menu">
 	<ul>
-		<li class="fa fa-bars fa-2x"></li>
-		<li class="fa fa-home fa-2x"></li>
-		<li class="fa fa-user fa-2x"></li>
-		<li class="fa fa-graduation-cap fa-2x"></li>
-		<li class="fa fa-briefcase fa-2x"></li>
-		<li class="fa fa-paper-plane fa-2x"></li>
+		<li>
+			<span class="fa fa-bars fa-2x"></span>
+			<h4>Menu</h4>
+		</li>
+		<li>
+			<a href="#"><span class="fa fa-home fa-2x"></span>
+			<h4>Home</h4></a>
+		</li>
+		<li>
+			<a href="#"><span class="fa fa-user fa-2x"></span>
+			<h4>About me</h4></a>
+		</li>
+		<li>
+			<a href="#"><span class="fa fa-graduation-cap fa-2x"></span>
+			<h4>Resume</h4></a>
+		</li>
+		<li>
+			<a href="#"><span class="fa fa-briefcase fa-2x"></span>
+			<h4>Portfolio</h4></a>
+		</li>
+		<li>
+			<a href="#"><span class="fa fa-paper-plane fa-2x"></span>
+			<h4>Contact</h4></a>
+		</li>
 	</ul>
 </div>
