--- a/dev/pages/index.hbs
+++ b/dev/pages/index.hbs
@@ -1,3 +1,5 @@
 {{>head}}
 	{{>menu}}
+	{{>fullimage imgsrc='img/img.jpg' description="Marvin"}}
+	{{>fullimage imgsrc='img/img2.jpg' description="Solano" caption="Senior Web Developer"}}
 {{>foot}}
