--- a/dev/components/menu'/menu.hbs
+++ b/dev/components/menu'/menu.hbs
@@ -5,15 +5,15 @@
 			<h4>Menu</h4>
 		</li>
 		<li>
-			<a href="#"><span class="fa fa-home fa-2x"></span>
+			<a href="/"><span class="fa fa-home fa-2x"></span>
 			<h4>Home</h4></a>
 		</li>
 		<li>
-			<a href="#"><span class="fa fa-user fa-2x"></span>
+			<a href="about.html"><span class="fa fa-user fa-2x"></span>
 			<h4>About me</h4></a>
 		</li>
 		<li>
-			<a href="#"><span class="fa fa-graduation-cap fa-2x"></span>
+			<a href="/resume.html"><span class="fa fa-graduation-cap fa-2x"></span>
 			<h4>Resume</h4></a>
 		</li>
 		<li>
